# snowrunner-plus

./: .env.local.example  .gitignore  CLAUDE.md  README.md  THIRD-PARTY-NOTICES.md
docs/evidence/: exe-strings.txt  runtime-env.txt  sample-engine.xml  sample-gearbox.xml  sample-truck-sounds.txt
mod/: CMakeLists.txt  install-mod.sh  uninstall-mod.sh
mod/cmake/: mingw-w64-x86_64.cmake
mod/src/: assets.cpp  assets.h  bindings.cpp  bindings.h  dllmain.cpp  gauges.cpp  gauges.h  log.h  mem.cpp  mem.h  overlay.cpp  paths.h  telemetry.h  widgets.cpp  widgets.h  xhook.cpp
mod/synth/: engine_synth.hpp  synth_test  synth_test.cpp
tools/: README.md  _env.sh  analyze-trace.py  frida-drive-harness.js  frida-trace-xaudio.js  install-recon.sh  make_synthetic_trace.py  srenv.py  uninstall-recon.sh  vgamepad.py
tools/auto/: _gamepids.sh  health.sh  launch.sh  record.sh  shot.sh  stop.sh  uinput_kbd.py
tools/dev/: build.sh  cfg.json  dash.json  gear_addr.txt  install-dev.sh  install-devmod.sh  rpm.txt  rpm_dash.py  rpm_overlay.py  rpm_ui.py  shiftsnd.json  watch_out.txt
tools/model/: analyze_engine_audio.py  build_base_freq_table.py  (+3 more)
wiki/: Architecture.md  Asset-and-HUD-System.md  Audio-Pipeline.md  Changelog.md  Distribution-and-Portability.md  Feasibility-and-Plan.md  Feature-Auto-Gearbox.md  Feature-Clutch.md  Feature-Drivetrain-Controls.md  Feature-Engine-Audio.md  Feature-Input-Binds.md  Feature-Manual-Shifter.md  Feature-Overlay.md  Feature-RPM.md  Features.md  Game-Model.md  Ghidra-Functions.md  Home.md  Input-System.md  Memory-Map.md  Open-Problems.md  Platform-Roadmap.md  Prior-Art.md  RE-Toolchain.md  README.md  RPM-Derivation.md  SnowRunner-Plus.md  Speculation.md  _Footer.md  _Sidebar.md
(+63 files in other folders)
